import React from "react";
import renderer from "react-test-renderer";
import Mistakes from "./mistakes.jsx";

describe(`<Mistakes/> renders correctly`, () => {
  it(`With 0 count`, () => {
    const tree = renderer
        .create(<Mistakes
          count={0}
        />)
            .toJSON();

    expect(tree).toMatchSnapshot();
  });

  it(`With 1 count`, () => {
    const tree = renderer
        .create(<Mistakes
          count={1}
        />)
            .toJSON();

    expect(tree).toMatchSnapshot();
  });
});
